Fixes and updates

--- a/Web.Statu/Views/Subjekt/Dotace.cshtml
+++ b/Web.Statu/Views/Subjekt/Dotace.cshtml
@@ -114,13 +114,13 @@
     <div class="col-sm-7 col-sm-pull-5 col-xs-12 col-xs-pull-0">
         <div>
             <p>
-                2017 = @Model.Firma.HoldingStatisticsDotace(HlidacStatu.Lib.Data.Relation.AktualnostType.Nedavny).StatisticsForYear(2017).CelkemCerpano
+                2017 = @(Model.Firma.HoldingStatisticsDotace(HlidacStatu.Lib.Data.Relation.AktualnostType.Nedavny).StatisticsForYear(2017)?.CelkemCerpano)
             </p>
             <p>
-                2018 = @Model.Firma.HoldingStatisticsDotace(HlidacStatu.Lib.Data.Relation.AktualnostType.Nedavny).StatisticsForYear(2018).CelkemCerpano
+                2018 = @(Model.Firma.HoldingStatisticsDotace(HlidacStatu.Lib.Data.Relation.AktualnostType.Nedavny).StatisticsForYear(2018)?.CelkemCerpano)
             </p>
             <p>
-                2019 = @Model.Firma.HoldingStatisticsDotace(HlidacStatu.Lib.Data.Relation.AktualnostType.Nedavny).StatisticsForYear(2019).CelkemCerpano
+                2019 = @(Model.Firma.HoldingStatisticsDotace(HlidacStatu.Lib.Data.Relation.AktualnostType.Nedavny).StatisticsForYear(2019)?.CelkemCerpano)
             </p>
             <h4>Souhrn</h4>
             @{
@@ -166,7 +166,7 @@
 
                 if (totalCountDotaceHolding - dotacePocet > 0)
                 {
-                    var sdotaceHDiffKc = " v hodnotě <b>" + HlidacStatu.Util.RenderData.NicePrice(totalSumDotaceHolding - dotacePocet, html: true) + "</b>.";
+                    var sdotaceHDiffKc = " v hodnotě <b>" + HlidacStatu.Util.RenderData.NicePrice(totalSumDotaceHolding - dotaceSuma, html: true) + "</b>.";
                     var sdotaceHKc = " v celkové hodnotě <b>" + HlidacStatu.Util.RenderData.NicePrice(totalSumDotaceHolding, html: true) + "</b>.";
                     string durlH = "/dotace/hledat?Q=holding%3A+" + Model.Firma.ICO;
                     if (Model.Firma.JsemOVM())
