--- a/Web.Statu/Views/Home/Reports/28_Ministerstva.cshtml
+++ b/Web.Statu/Views/Home/Reports/28_Ministerstva.cshtml
@@ -140,10 +140,10 @@
                                 .Result.Select(m =>
                                     new ministr()
                                     {
-                                        Id = m.id,
+                                        Id = m.id.ToString(),
                                         Vlada = m.vlada,
                                         Resort = m.resort,
-                                        Pozice = m.portfej,
+                                        Pozice = m.pozice,
                                         Jmeno = m.jmeno,
                                         Strana = m.strana,
                                         Zacatek = m.zacatek,
