--- a/Web.Statu/Views/Subjekt/RegistrSmluv.cshtml
+++ b/Web.Statu/Views/Subjekt/RegistrSmluv.cshtml
@@ -177,7 +177,10 @@
                     </a>
                     za <strong>@(Html.Raw(HlidacStatu.Lib.Data.Smlouva.NicePrice(seasonStat.CelkovaHodnotaSmluv, html: true, shortFormat: true)))</strong>
 
-                    @($"({(1 + zmenaObjemuSmluv.percentage).ToString("P2")} objemu smluv za {currentSeasonYear - 1})")
+                    @if(zmenaObjemuSmluv.percentage.HasValue)
+                    {
+                        @($"({zmenaObjemuSmluv.percentage?.ToString("P2")} objemu smluv za {currentSeasonYear - 1})")
+                    }
 
                 </p>
 
