Nespolehlivy platci DPH fix

--- a/Web.Statu/Views/Insolvence/Index.cshtml
+++ b/Web.Statu/Views/Insolvence/Index.cshtml
@@ -40,7 +40,7 @@
 
 @Html.Partial("_SearchForm", new HlidacStatu.Lib.Searching.InsolvenceSearchResult())
 
-@Html.Action("CachedAction_Child_48H", new { model = Model, NameOfView = "Index.Content.Politici" })
+@*@Html.Action("CachedAction_Child_48H", new { model = Model, NameOfView = "Index.Content.Politici" })*@
 
 <div class="row">
 
