remove additional title

--- a/Web.Statu/Views/Subjekt/DalsiDatabaze.cshtml
+++ b/Web.Statu/Views/Subjekt/DalsiDatabaze.cshtml
@@ -12,7 +12,7 @@
 @using HlidacStatu.Lib.Render
 
 @{ 
-    ViewBag.Title = Model.Jmeno + " v dalších databázích";
+    //ViewBag.Title = Model.Jmeno + " v dalších databázích";
 }
 @section breadcrumb
 {
