--- a/Web.Statu/Views/Subjekt/DalsiInformace.cshtml
+++ b/Web.Statu/Views/Subjekt/DalsiInformace.cshtml
@@ -97,7 +97,7 @@
 </style>
 
 <div class="head">
-    <h3>@Html.KIndexLabelLink(Model.ICO, 30, linkToKindex: true)@Model.Jmeno: Dotace</h3>
+    <h3>@Html.KIndexLabelLink(Model.ICO, 30, linkToKindex: true)@Model.Jmeno: Další informace</h3>
     <div><a class="btn btn-primary" href="/subjekt2/@Model.ICO">Zpět na přehled</a></div>
     @WebUtil.CompanySummary(Model)
 </div>
