--- a/Web.Statu/Views/Subjekt/Dodavatele.cshtml
+++ b/Web.Statu/Views/Subjekt/Dodavatele.cshtml
@@ -9,7 +9,7 @@
 @using HlidacStatu.Lib.Render;
 
 @{ 
-    ViewBag.Title = "Dodavatelé " + Model.Jmeno ;
+    //ViewBag.Title = "Dodavatelé " + Model.Jmeno ;
 }
 @section breadcrumb
 {
