--- a/Web.Statu/Views/Subjekt/Index.cshtml
+++ b/Web.Statu/Views/Subjekt/Index.cshtml
@@ -7,7 +7,7 @@
 @using System.Linq;
 
 @{ 
-    ViewBag.Title = Model.Jmeno;
+    //ViewBag.Title = Model.Jmeno;
 
     var statistics = Model.StatistikaRegistruSmluv();
     var seasonStat = statistics.CurrentSeasonStatistics();
