--- a/Web.Statu/Views/Subjekt/InsolvencniRejstrik.cshtml
+++ b/Web.Statu/Views/Subjekt/InsolvencniRejstrik.cshtml
@@ -9,7 +9,7 @@
 @using HlidacStatu.Lib.Render;
 
 @{ 
-    ViewBag.Title = "Insolvenční rejstřík " + Model.Firma.Jmeno;
+    //ViewBag.Title = "Insolvenční rejstřík " + Model.Firma.Jmeno;
 }
 @section breadcrumb
 {
