--- a/Web.Statu/Views/Subjekt/ObchodySeSponzory.cshtml
+++ b/Web.Statu/Views/Subjekt/ObchodySeSponzory.cshtml
@@ -12,7 +12,7 @@
 @using HlidacStatu.Lib.Render
 
 @{ 
-    ViewBag.Title = "Obchody " + Model.Jmeno + " s firmami sponzorující politické strany";
+    //ViewBag.Title = "Obchody " + Model.Jmeno + " s firmami sponzorující politické strany";
 }
 @section breadcrumb
 {
