--- a/Web.Statu/Views/Subjekt/Odberatele.cshtml
+++ b/Web.Statu/Views/Subjekt/Odberatele.cshtml
@@ -10,7 +10,7 @@
 
 
 @{ 
-    ViewBag.Title = "Odběratelé " + Model.Jmeno ;
+    //ViewBag.Title = "Odběratelé " + Model.Jmeno ;
 }
 @section breadcrumb
 {
