--- a/Web.Statu/Views/Subjekt/RegistrSmluv.cshtml
+++ b/Web.Statu/Views/Subjekt/RegistrSmluv.cshtml
@@ -9,7 +9,7 @@
 @using HlidacStatu.Lib.Render;
 
 @{
-    ViewBag.Title = "" + Model.Firma.Jmeno + " v registru smluv.";
+    //ViewBag.Title = "" + Model.Firma.Jmeno + " v registru smluv.";
 
     var statistics = Model.Firma.StatistikaRegistruSmluv();
     int chartMinDate = 2016;
