--- a/Web.Statu/Views/Subjekt/VerejneZakazky.cshtml
+++ b/Web.Statu/Views/Subjekt/VerejneZakazky.cshtml
@@ -10,7 +10,7 @@
 @using HlidacStatu.Lib.Data.VZ;
 
 @{ 
-    ViewBag.Title = "Veřejné zakázky " + Model.Firma.Jmeno + "";
+    //ViewBag.Title = "Veřejné zakázky " + Model.Firma.Jmeno + "";
 }
 @section breadcrumb
 {
