--- a/Web.Statu/Views/Subjekt/RightColumn.cshtml
+++ b/Web.Statu/Views/Subjekt/RightColumn.cshtml
@@ -25,7 +25,7 @@
                 </div>
             </div>
             <div class="col-sm-8">
-                <p class="py-0 my-0 text-muted">Aktuální ředitel</p>
+                <p class="py-0 my-0 text-muted">@ceo.Role</p>
                 <p class="py-0 my-0 lead">@ceo.Osoba.FullName()</p>
                 <p class="py-0 my-0">od @(ceo.From?.ToString("dd.MM.yyyy"))</p>
             </div>
