grey text on index page describing section

--- a/Web.Statu/Views/Subjekt/Index.cshtml
+++ b/Web.Statu/Views/Subjekt/Index.cshtml
@@ -85,7 +85,7 @@
             <div>
                 <h4>K-Index</h4>
 
-                <p class=" muted">
+                <p class="text-muted">
                     Index korupčního rizika - zkráceně K–Index, je ukazatel míry rizikových faktorů. Tyto faktory jsou spojovány s rizikem korupce a nehospodárným nakládáním veřejných peněz.
                 </p>
                 <a href="/kindex/detail/@Model.ICO">
