--- a/Web.Statu/Views/Subjekt/Profile.cshtml
+++ b/Web.Statu/Views/Subjekt/Profile.cshtml
@@ -108,7 +108,7 @@
                             Index korupčního rizika K–Index
                         </td>
                         <td>
-                            <p class=" muted">
+                            <p class="text-muted">
                                 Index korupčního rizika - zkráceně K–Index, je ukazatel míry rizikových faktorů. Tyto faktory jsou spojovány s rizikem korupce a nehospodárným nakládáním veřejných peněz.
                             </p>
                             @if (kidx.roky.Any(m => m.KIndexReady))
