--- a/Web.Statu/Views/Kindex/Detail_child.cshtml
+++ b/Web.Statu/Views/Kindex/Detail_child.cshtml
@@ -107,7 +107,10 @@
 
                                 if (kidx != null && kidx.KIndexReady && year != selectedYear)
                                 {
-                                    <span title="@HlidacStatu.Util.RenderData.NiceNumber(kidx.KIndex)"><a href="@ViewBag.ICO?rok=@year">@Html.KIndexIcon(kidx.KIndexLabel, "padding-left:6px;height:18px") v @year</a>@(postfix)</span>
+                                    <span title="@HlidacStatu.Util.RenderData.NiceNumber(kidx.KIndex)">
+                                        <a href="@ViewBag.ICO?rok=@year">@Html.KIndexIcon(kidx.KIndexLabel, "padding-left:6px;height:18px") v @year</a>
+                                        @(postfix)
+                                    </span>
 
                                 }
                             }
