--- a/Web.Statu/Views/Subjekt/Index.cshtml
+++ b/Web.Statu/Views/Subjekt/Index.cshtml
@@ -14,7 +14,7 @@
     var currentSeasonYear = statistics.CurrentSeasonYear();
     var zmenaObjemuSmluv = statistics.ChangeBetweenYears(currentSeasonYear - 1, currentSeasonYear, s => s.CelkovaHodnotaSmluv);
 
-    var lastKindex = Model.Kindex().LastReadyKIndex();
+    var kindex = Model.Kindex();
 }
 
 @section breadcrumb
@@ -81,8 +81,7 @@
     @* ----- K-Index ----- *@
     @using (Html.ShowKIndex(this.User))
     {
-        HlidacStatu.Lib.Analysis.KorupcniRiziko.KIndexData kidx = HlidacStatu.Lib.Analysis.KorupcniRiziko.KIndex.Get(Model.ICO);
-        if (kidx != null && kidx.LastKIndexLabel() != HlidacStatu.Lib.Analysis.KorupcniRiziko.KIndexData.KIndexLabelValues.None)
+        if (kindex != null && kindex.LastKIndexLabel() != HlidacStatu.Lib.Analysis.KorupcniRiziko.KIndexData.KIndexLabelValues.None)
         {
     <div>
         <h4>K-Index</h4>
@@ -91,12 +90,12 @@
             Index korupčního rizika - zkráceně K–Index, je ukazatel míry rizikových faktorů. Tyto faktory jsou spojovány s rizikem korupce a nehospodárným nakládáním veřejných peněz.
         </p>
         <div class="row">
-            <div class="col-sm-2" title="@HlidacStatu.Util.RenderData.NiceNumber(lastKindex.KIndex)">
-                <a href="/kindex/detail/@Model.ICO">@Html.KIndexIcon(lastKindex.KIndexLabel, "width:100px")</a>
+            <div class="col-sm-2" title="@HlidacStatu.Util.RenderData.NiceNumber(kindex.LastReadyKIndex().KIndex)">
+                <a href="/kindex/detail/@Model.ICO">@Html.KIndexIcon(kindex.LastReadyKIndex().KIndexLabel, "width:100px")</a>
             </div>
             <div class="col-sm-10">
                 <div>
-                    @Html.Raw(HlidacStatu.Util.InfoFact.RenderInfoFacts(Model.Kindex().InfoFacts(lastKindex.Rok), 3, true, false, lineFormat: "<p>{0}</p>", html: true))
+                    @Html.Raw(HlidacStatu.Util.InfoFact.RenderInfoFacts(kindex.InfoFacts(kindex.LastReadyKIndex().Rok), 3, true, false, lineFormat: "<p>{0}</p>", html: true))
                 </div>
             </div>
         </div>
@@ -111,7 +110,7 @@
              mustAuth: true,
              addData: Model.ICO)
         <br />
-        <a href="/kindex/detail/@Model.ICO" class="text-uppercase"><strong>Zobrazit podrobnosti</strong></a>
+        <a href="/kindex/detail/@Model.ICO" class="text-uppercase"><strong>Zobrazit podrobnosti o K-Indexu</strong></a>
     </div>
             <hr />
         }
@@ -187,7 +186,7 @@
                 @Html.Raw(Devmasters.Lang.Plural.GetWithZero((int)seasonStat.PocetSmluvBezCeny, "<u><strong>0 </strong>smluv</u>,", "<u><strong>jedné </strong>smlouvy</u>,", "<u><strong>{0} </strong>smluv</u>,", "<u><strong>{0:### ### ##0} </strong>smluv</u>,"))
             </a> což je celkem @(seasonStat.PercentSmluvBezCeny.ToString("P2")) ze všech.
         </p>
-        <a href="/subjekt2/RegistrSmluv/@Model.ICO" class="text-uppercase"><strong>Zobrazit podrobnosti</strong></a>
+        <a href="/subjekt2/RegistrSmluv/@Model.ICO" class="text-uppercase"><strong>Zobrazit podrobnosti o registru smluv</strong></a>
     </div>
     <hr />
 
@@ -214,7 +213,7 @@
                 </p>
             }
         }
-        <a href="/subjekt2/VerejneZakazky/@Model.ICO" class="text-uppercase"><strong>Zobrazit podrobnosti</strong></a>
+        <a href="/subjekt2/VerejneZakazky/@Model.ICO" class="text-uppercase"><strong>Zobrazit podrobnosti o veřejných zakázkách</strong></a>
     </div>
     <hr />
 
@@ -330,7 +329,7 @@
             }
         }
 
-        <a href="/subjekt2/Dotace/@Model.ICO" class="text-uppercase"><strong>Zobrazit podrobnosti</strong></a>
+        <a href="/subjekt2/Dotace/@Model.ICO" class="text-uppercase"><strong>Zobrazit podrobnosti o dotacích</strong></a>
     </div>
     <hr />
 
@@ -360,7 +359,7 @@
                 </p>
             }
 
-        <a href="/subjekt2/InsolvencniRejstrik/@Model.ICO" class="text-uppercase"><strong>Zobrazit podrobnosti</strong></a>
+        <a href="/subjekt2/InsolvencniRejstrik/@Model.ICO" class="text-uppercase"><strong>Zobrazit podrobnosti o insolvencích</strong></a>
     </div>
     <hr />
 
@@ -372,19 +371,19 @@
             <h4><a href="/subjekt2/ObchodySeSponzory/@Model.ICO">Obchody úřadu s firmami navázanými na politiky</a></h4>
         </div>
         <hr />
-        <div>
-            <h4><a href="/subjekt2/dodavatele/@Model.ICO">Statistika dodavatelů úřadu</a></h4>
-        </div>
-        <hr />
-        <div>
-            <h4><a href="/subjekt2/odberatele/@Model.ICO">Statistiky odběratelů úřadu</a></h4>
-        </div>
-        <hr />
-        <div>
-            <h4><a href="/subjekt2/DalsiDatabaze/@Model.ICO">Úřad v dalších databázích</a></h4>
-        </div>
-        <hr />
     }
+        <div>
+            <h4><a href="/subjekt2/dodavatele/@Model.ICO">Statistika dodavatelů @(Model.JsemOVM()? "úřadu" : "subjektu" )</a></h4>
+        </div>
+        <hr />
+        <div>
+            <h4><a href="/subjekt2/odberatele/@Model.ICO">Statistiky odběratelů @(Model.JsemOVM()? "úřadu" : "subjektu" )</a></h4>
+        </div>
+        <hr />
+        <div>
+            <h4><a href="/subjekt2/DalsiDatabaze/@Model.ICO">@(Model.JsemOVM()? "Úřad" : "Subjekt" ) v dalších databázích</a></h4>
+        </div>
+        <hr />
     <div>
         <h4><a href="/subjekt2/DalsiInformace/@Model.ICO">Další informace</a></h4>
     </div>
