--- a/Web.Statu/Views/Subjekt/Index.cshtml
+++ b/Web.Statu/Views/Subjekt/Index.cshtml
@@ -121,7 +121,9 @@
 
     <div>
         <h4>Registr smluv</h4>
-
+        <p class="text-muted">Detailní informace o smlouvách, uzavřených @Html.SubjektTypTrojice(Model,"úřadem","státní organizací","soukromou firmou") 
+            za poslední roky, uvedených v registru smluv. 
+        </p>
         @{
             var currentYear = DateTime.Now.Year;
             var numFatalIssue = HlidacStatu.Lib.Data.Smlouva.Search.SimpleSearch($"ico:{Model.ICO} AND chyby:zasadni AND cena:0 AND datumUzavreni:[{currentYear}-01-01 TO {currentYear + 1}-01-01}}", 0, 0, HlidacStatu.Lib.Data.Smlouva.Search.OrderResult.FastestForScroll, exactNumOfResults: true).ElasticResults.HitsMetadata.Total;
@@ -194,6 +196,9 @@
 
     <div>
         <h4>Veřejné zakázky</h4>
+        <p class="text-muted">Podrobné informace o veřejných zakázkých, @Html.SubjektTypTrojice(Model,"které úřad vypsal","které státní organizace vypsala či se jich zúčastnila","kterých se firma zúčastnila"), 
+        jak z věstníku veřejných zakázek, tak z profilů zadavatelů. 
+        </p>
         @{
             var resVZdodav = HlidacStatu.Lib.Data.VZ.VerejnaZakazka.Searching.SimpleSearch("icododavatel:" + Model.ICO, null, 1, 0, "1");
             var resVZzadav = HlidacStatu.Lib.Data.VZ.VerejnaZakazka.Searching.SimpleSearch("icozadavatel:" + Model.ICO, null, 1, 0, "1");
@@ -221,6 +226,9 @@
 
     <div>
         <h4>Dotace</h4>
+        <p class="text-muted">Podrobné informace o dotacích, které @Html.SubjektTypTrojice(Model,"úřad dostal","organizace dostala","firma obdržela"),
+        z nejúplnější databáze dotací.
+        </p>
         @{
             var dotaceService = new HlidacStatu.Lib.Data.Dotace.DotaceService();
 
@@ -337,6 +345,9 @@
 
     <div>
         <h4>Insolvenční rejstřík</h4>
+        <p class="text-muted">Informace o insolvenčních řízeních, kterých se @Html.SubjektTypTrojice(Model,"úřad ","organizace ","firma ") 
+        účastní jako dlužník, věřitel či správce.
+        </p>
 
         @{ var insDluznik = HlidacStatu.Lib.Data.Insolvence.Insolvence.SimpleSearch("icodluznik:" + Model.ICO, 1, 1, (int)HlidacStatu.Lib.Searching.InsolvenceSearchResult.InsolvenceOrderResult.FastestForScroll, false, HlidacStatu.Web.Framework.InsolvenceLimitedView.IsLimited(this.User));
             var insVeritel = HlidacStatu.Lib.Data.Insolvence.Insolvence.SimpleSearch("icoveritel:" + Model.ICO, 1, 1, (int)HlidacStatu.Lib.Searching.InsolvenceSearchResult.InsolvenceOrderResult.FastestForScroll, false, HlidacStatu.Web.Framework.InsolvenceLimitedView.IsLimited(this.User));
@@ -365,27 +376,41 @@
 
     @* ----- Odkazy na další -----*@
 
-    @if (Model.JsemOVM())
+    @if (Model.JsemStatniFirma())
     {
         <div>
             <h4><a href="/subjekt2/ObchodySeSponzory/@Model.ICO">Obchody úřadu s firmami navázanými na politiky</a></h4>
+            <p class="text-muted">Podrobný přehled smluv, které @Html.SubjektTypTrojice(Model,"úřad ","organizace ","") 
+            uzavřela s firmou, která sponzorovala politické straný (není jení majitel).
+            </p>
         </div>
         <hr />
     }
         <div>
             <h4><a href="/subjekt2/dodavatele/@Model.ICO">Statistika dodavatelů @(Model.JsemOVM()? "úřadu" : "subjektu" )</a></h4>
+            <p class="text-muted">Přehledná statistika největších dodavatelů pro @Html.SubjektTypTrojice(Model,"úřad","organizaci","firmu") 
+            podle smluv v registru smluv. 
+            </p>
         </div>
         <hr />
         <div>
             <h4><a href="/subjekt2/odberatele/@Model.ICO">Statistiky odběratelů @(Model.JsemOVM()? "úřadu" : "subjektu" )</a></h4>
+            <p class="text-muted">Přehledná statistika největších odběratelů zboží a služeb od @Html.SubjektTypTrojice(Model,"tohoto úřadu","této organizace ","této firmy") 
+            podle smluv v registru smluv. 
+            </p>
         </div>
         <hr />
         <div>
             <h4><a href="/subjekt2/DalsiDatabaze/@Model.ICO">@(Model.JsemOVM()? "Úřad" : "Subjekt" ) v dalších databázích</a></h4>
+            <p class="text-muted">Na hlídači máme kromě hlavních databází @(HlidacStatu.Lib.Data.External.DataSets.DataSetDB.AllDataSets.Get()?.Count().ToString() ?? "") dalších menších databází.
+            Zde vám podrobně vypíšeme, co v nich @Html.SubjektTypTrojice(Model,"o tomto úřadu","o této organizaci ","této firmě") nalezneme.
+            </p>
         </div>
         <hr />
     <div>
         <h4><a href="/subjekt2/DalsiInformace/@Model.ICO">Další informace</a></h4>
+            <p class="text-muted">Další informace a zajímavosti @Html.SubjektTypTrojice(Model,"o tomto úřadu","o této organizaci ","této firmě") ze státních rejstříků.
+            </p>
     </div>
 
 </div>
