--- a/Web.Statu/App_Code/WebUtil.cshtml
+++ b/Web.Statu/App_Code/WebUtil.cshtml
@@ -1327,7 +1327,7 @@ Máme pro vás denné sledovat <b>nové {dataTypeName} odpovídající tomuto do
         @if (firma.KategorieOVM().Count() > 0)
         {
             <span>
-                Je součástí <a href="">@Devmasters.Lang.Plural.Get(firma.KategorieOVM().Count(), "jedné kategorie", "{0} kategorií", "{0} kategorií") orgánu veřejné moci.</a>
+                Je součástí <a href="/subjekt2/DalsiInformace/@firma.ICO">@Devmasters.Lang.Plural.Get(firma.KategorieOVM().Count(), "jedné kategorie", "{0} kategorií", "{0} kategorií") orgánu veřejné moci.</a>
             </span>
         }
     </p>
